--- a/Table/Table.html
+++ b/Table/Table.html
@@ -205,7 +205,7 @@
             <span class="item">About</span>
         </a></li>
         <li class="nav-item "><a class=" nav-link active item" href="#">
-            <i class="fas fa-table" style="font-size: 20px; padding: 0 10px"></i>Table</a></li>
+            <i class="fas fa-table" style="font-size: 20px; padding: 0 10px"></i>Target</a></li>
         <li class="nav-item"><a class=" nav-link" href="#">
             <span class="item">Settings</span>
         </a></li>
@@ -244,24 +244,27 @@
         </tr>
         </tbody>
     </table>
-</main>
 
-<footer class="footer bg-dark">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-6">
-                <script>document.write(new Date().getFullYear())</script> © Codefox theme by <a href="">Coderthemes</a>
-            </div>
-            <div class="col-md-6">
-                <div class="text-md-end footer-links d-none d-sm-block">
-                    <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">About Us</a>
-                    <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">Help</a>
-                    <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">Contact Us</a>
+
+    <footer class="footer bg-dark">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6">
+                    <script>document.write(new Date().getFullYear())</script> © Codefox theme by <a href="">Coderthemes</a>
+                </div>
+                <div class="col-md-6">
+                    <div class="text-md-end footer-links d-none d-sm-block">
+                        <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">About Us</a>
+                        <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">Help</a>
+                        <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">Contact Us</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
+</main>
+
+
 <script src="../DashboardHandlers.js"></script>
 </body>
 </html>
