--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                             <h5 class="text-muted mt-0">Active Users</h5>
                             <h2 class="mb-0">900</h2>
                         </div>
-                        <i class="mdi mdi-account text-light display-3 float-end"></i>
+                        <i class="fas fa-users text-dark display-3 float-end"></i>
                     </div>
                     <p class="text-muted mt-3 mb-3">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut
                         ratione voluptate msequi nesciunt.</p>
@@ -351,7 +351,7 @@
                             <h5 class="text-muted mt-0">Business Profile</h5>
                             <h2 class="mb-0">$40,340</h2>
                         </div>
-                        <i class="mdi mdi-office-building text-light display-3 float-end"></i>
+                        <i class="fas fa-building text-dark display-3 float-end"></i>
                     </div>
                     <p class="text-muted mt-3 mb-3">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse
                         quam nihil molestiae consequatur.</p>
@@ -363,7 +363,7 @@
             </div>
         </div>
 
-        <div style="margin-left: 10px">
+        <div style="margin-left: 10px; margin-right: 10px;">
             <div class="card">
                 <div class="card-body">
                     <div class="d-flex align-items-center">
@@ -371,7 +371,7 @@
                             <h5 class="text-muted mt-0">Market Price</h5>
                             <h2 class="mb-0">$1,180</h2>
                         </div>
-                        <i class="mdi mdi-database-marker text-light display-3 float-end"></i>
+                        <i class="fas fa-database text-dark display-3 float-end"></i>
                     </div>
                     <p class="text-muted mt-3 mb-3">At vero eos et accusamus et iusto odio dignissimos ducimus qui
                         blanditiis praesentium voluptatum deleniti atque.</p>
