--- a/New Student/NewStudent.html
+++ b/New Student/NewStudent.html
@@ -64,7 +64,9 @@
     <!--Search Bar-->
     <div class="d-flex ml-auto" style="align-items: center;">
         <input aria-label="Search" class="form-control form-control-dark" placeholder="Search"
-               style="width: 300px; border-radius: 24px; height: 38px" type="text">
+               style="width: 300px; border-radius: 24px; height: 38px;" type="text">
+        <img src="https://cdn1.iconfinder.com/data/icons/hawcons/32/698956-icon-111-search-512.png"
+             style="width: 20px; height: 25px; position: relative; transform: translateX(-39px)">
 
         <!--Notification icon-->
         <a class="nav-link waves-effect waves-light text-white" data-bs-toggle="dropdown"
