--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                         blanditiis praesentium voluptatum deleniti atque.</p>
                     <div>
                         <a class="text-primary float-end" href="#"><i class="mdi mdi-arrow-right font-20"></i></a>
-                        <span class="bg-soft-pink fw-medium text-pink rounded px-2 font-12 py-1">Excellent</span>
+                        <span class="bg-soft-pink fw-medium text-success rounded px-2 font-12 py-1">Excellent</span>
                     </div>
                 </div>
             </div>
