--- a/Contact Us/ContactUs.html
+++ b/Contact Us/ContactUs.html
@@ -201,7 +201,7 @@
 <aside class="sidebar">
     <ul class="navbar-nav side-menu">
         <li class="nav-item">
-            <a class="nav-link active item" href="#">
+            <a class="nav-link " href="../index.html">
                 <i class="fab fa-dashcube" style="font-size: 20px; padding: 0 10px"></i>Dashboard</a></li>
         <li class="nav-item"><a class=" nav-link" href="#">
             <span class="item">About</span>
@@ -236,7 +236,7 @@
                         <!--Grid column-->
                         <div class="col-md-6">
                             <div class="md-form mb-0">
-                                <input type="text" id="name" name="name" class="form-control p-2" style="width: 400px">
+                                <input type="text" id="name" name="name" class="form-control p-2" style="width: 400px; height: 50px">
                                 <label for="name" class="">Your name</label>
                             </div>
                         </div>
@@ -245,7 +245,7 @@
                         <!--Grid column-->
                         <div class="col-md-6">
                             <div class="md-form mb-0">
-                                <input type="text" id="email" name="email" class="form-control p-2" style="width: 400px">
+                                <input type="text" id="email" name="email" class="form-control p-2" style="width: 400px; height: 45px">
                                 <label for="email" class="">Your email</label>
                             </div>
                         </div>
@@ -255,10 +255,10 @@
                     <!--Grid row-->
 
                     <!--Grid row-->
-                    <div class="row">
+                    <div class="row my-3" style="margin-top: 20px">
                         <div class="col-md-12">
                             <div class="md-form mb-0">
-                                <input type="text" id="subject" name="subject" class="form-control">
+                                <input type="text" id="subject" name="subject" class="form-control p-2">
                                 <label for="subject" class="">Subject</label>
                             </div>
                         </div>
