--- a/New Student/NewStudent.html
+++ b/New Student/NewStudent.html
@@ -416,7 +416,7 @@
                     <div class="text-md-end footer-links d-none d-sm-block">
                         <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">About Us</a>
                         <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">Help</a>
-                        <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">Contact Us</a>
+                        <a href="../Contact%20Us/ContactUs.html" style="margin-right: 10px; color: #8c98a5; text-decoration: none">Contact Us</a>
                     </div>
                 </div>
             </div>
