--- a/index.html
+++ b/index.html
@@ -394,10 +394,9 @@
                 </div>
                 <div class="col-md-6">
                     <div class="text-md-end footer-links d-none d-sm-block">
-                        <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">About
-                            Us</a>
+                        <a href="#" style="margin-right: 10px; color: #8c98a5; text-decoration: none">About Us</a>
                         <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">Help</a>
-                        <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">Contact
+                        <a href="./Contact%20Us/ContactUs.html" style="margin-right: 10px; color: #8c98a5; text-decoration: none">Contact
                             Us</a>
                     </div>
                 </div>
