--- a/New Student/NewStudent.html
+++ b/New Student/NewStudent.html
@@ -204,14 +204,12 @@
         <li class="nav-item">
             <a class="nav-link item" href="../index.html">
                 <i class="fab fa-dashcube" style="font-size: 20px; padding: 0 10px"></i>Dashboard</a></li>
-        <li class="nav-item"><a class=" nav-link" href="#">
-            <span class="item">About</span>
-        </a></li>
+        <li class="nav-item"><a class=" nav-link" href="../About/About.html">
+            <i class="fas fa-book-open"  style="font-size: 20px; padding: 0 10px"></i>About</a></li>
         <li class="nav-item"><a class=" nav-link" href="../Table/Table.html">
             <i class="fas fa-table" style="font-size: 20px; padding: 0 5px"></i>Target</a></li>
         <li class="nav-item"><a class=" nav-link" href="#">
-            <span class="item">Settings</span>
-        </a></li>
+            <i class="fas fa-user-cog"  style="font-size: 20px; padding: 0 5px"></i>Settings</a></li>
     </ul>
 </aside>
 
@@ -414,7 +412,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="text-md-end footer-links d-none d-sm-block">
-                        <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">About Us</a>
+                        <a href="../About/About.html;" style="margin-right: 10px; color: #8c98a5; text-decoration: none">About Us</a>
                         <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">Help</a>
                         <a href="../Contact%20Us/ContactUs.html" style="margin-right: 10px; color: #8c98a5; text-decoration: none">Contact Us</a>
                     </div>
