--- a/About/About.html
+++ b/About/About.html
@@ -1,10 +1,303 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+    <link href="../index.css" rel="stylesheet">
+    <link rel="stylesheet" href="About.css">
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
+    <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+          integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" rel="stylesheet">
     <title>CRM</title>
 </head>
 <body>
+<header class="navbar fixed-top flex-md-nowrap">
+    <div class="d-flex">
+        <a class="navbar-brand col-sm-3 col-md-2 mr-0 text-white mx-5" href="#">Company name</a>
+    </div>
 
+
+    <!--For add new option-->
+    <a class="nav-link dropdown-toggle waves-effect waves-light text-white"
+       data-bs-toggle="dropdown" href="#" id="Addnew" onclick="fun1()" role="button">
+        Add New
+        <i class="mdi mdi-chevron-down"></i>
+    </a>
+    <div class="dropdown-menu show" data-popper-placement="bottom-start" style="display: none;">
+        <!-- item-->
+        <a class="dropdown-item" href="../New%20Student/NewStudent.html">
+            <i class="fe-briefcase me-1"></i>
+            <span>Add New Student</span>
+        </a>
+
+        <!-- item-->
+        <a class="dropdown-item" href="javascript:void(0);">
+            <i class="fe-user me-1"></i>
+            <span>Users</span>
+        </a>
+
+        <!-- item-->
+        <a class="dropdown-item" href="javascript:void(0);">
+            <i class="fe-bar-chart-line- me-1"></i>
+            <span>Report</span>
+        </a>
+
+        <!-- item-->
+        <a class="dropdown-item" href="javascript:void(0);">
+            <i class="fe-settings me-1"></i>
+            <span>Settings</span>
+        </a>
+
+        <div class="dropdown-divider"></div>
+
+        <!-- item-->
+        <a class="dropdown-item" href="../Contact%20Us/ContactUs.html">
+            <i class="fe-headphones me-1"></i>
+            <span>Help &amp; Support</span>
+        </a>
+
+    </div>
+
+    <!--Search Bar-->
+    <div class="d-flex ml-auto" style="align-items: center;">
+        <input aria-label="Search" class="form-control form-control-dark" placeholder="Search"
+               style="width: 300px; border-radius: 24px; height: 38px;" type="text">
+        <img src="https://cdn1.iconfinder.com/data/icons/hawcons/32/698956-icon-111-search-512.png"
+             style="width: 20px; height: 25px; position: relative; transform: translateX(-39px)">
+
+        <!--Notification icon-->
+        <a class="nav-link waves-effect waves-light text-white" data-bs-toggle="dropdown"
+           href="#" onclick="fun2()" role="button">
+            <i class="far fa-bell noti-icon"></i>
+            <span class="badge bg-danger rounded-circle noti-icon-badge"
+                  style="position: relative; transform: translateY(-10px) translateX(-5px);">5</span>
+        </a>
+        <div class="notification dropdown-menu dropdown-menu-end dropdown-lg show" data-popper-placement="bottom-end"
+             style="height: 400px; overflow: hidden; transform: translateX(900px); display: none; ">
+
+            <!-- item-->
+            <div class="dropdown-item noti-title">
+                <h5 class="m-0">
+                            <span class="float-end">
+                                <a class="text-dark" href="">
+                                    <small>Clear All</small>
+                                </a>
+                            </span>Notification
+                </h5>
+            </div>
+
+            <div class="noti-scroll" data-simplebar="init">
+                <div class="simplebar-wrapper" style="margin: 0px;">
+                    <div class="simplebar-height-auto-observer-wrapper">
+                        <div class="simplebar-height-auto-observer"></div>
+                    </div>
+                    <div class="simplebar-mask">
+                        <div class="simplebar-offset" style="right: 0px; bottom: 0px;">
+                            <div class="simplebar-content-wrapper" style="height: auto; overflow: hidden scroll;">
+                                <div class="simplebar-content" style="padding: 0px;">
+
+                                    <!-- item-->
+                                    <a class="dropdown-item notify-item active" href="javascript:void(0);">
+                                        <div class="notify-icon">
+                                            <img alt="" class="img-fluid rounded-circle"></div>
+                                        <p class="notify-details">Cristina Pride</p>
+                                        <p class="text-muted mb-0 user-msg">
+                                            <small>Hi, How are you? What about our next meeting</small>
+                                        </p>
+                                    </a>
+
+                                    <!-- item-->
+                                    <a class="dropdown-item notify-item" href="javascript:void(0);">
+                                        <div class="notify-icon bg-primary">
+                                            <i class="mdi mdi-comment-account-outline"></i>
+                                        </div>
+                                        <p class="notify-details">Caleb Flakelar commented on Admin
+                                            <small class="text-muted">1 min ago</small>
+                                        </p>
+                                    </a>
+
+                                    <!-- item-->
+                                    <a class="dropdown-item notify-item" href="javascript:void(0);">
+                                        <div class="notify-icon">
+                                            <img alt="" class="img-fluid rounded-circle"></div>
+                                        <p class="notify-details">Karen Robinson</p>
+                                        <p class="text-muted mb-0 user-msg">
+                                            <small>Wow ! this admin looks good and awesome design</small>
+                                        </p>
+                                    </a>
+
+                                    <!-- item-->
+                                    <a class="dropdown-item notify-item" href="javascript:void(0);">
+                                        <div class="notify-icon bg-warning">
+                                            <i class="mdi mdi-account-plus"></i>
+                                        </div>
+                                        <p class="notify-details">New user registered.
+                                            <small class="text-muted">5 hours ago</small>
+                                        </p>
+                                    </a>
+
+                                    <!-- item-->
+                                    <a class="dropdown-item notify-item" href="javascript:void(0);">
+                                        <div class="notify-icon bg-info">
+                                            <i class="mdi mdi-comment-account-outline"></i>
+                                        </div>
+                                        <p class="notify-details">Caleb Flakelar commented on Admin
+                                            <small class="text-muted">4 days ago</small>
+                                        </p>
+                                    </a>
+
+                                    <!-- item-->
+                                    <a class="dropdown-item notify-item" href="javascript:void(0);">
+                                        <div class="notify-icon bg-secondary">
+                                            <i class="mdi mdi-heart"></i>
+                                        </div>
+                                        <p class="notify-details">Carlos Crouch liked
+                                            <b>Admin</b>
+                                            <small class="text-muted">13 days ago</small>
+                                        </p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="simplebar-placeholder" style="width: auto; height: 424px;"></div>
+                </div>
+                <div class="simplebar-track simplebar-horizontal" style="visibility: hidden;">
+                    <div class="simplebar-scrollbar" style="width: 0px; display: none;"></div>
+                </div>
+                <div class="simplebar-track simplebar-vertical" style="visibility: visible;">
+                    <div class="simplebar-scrollbar"
+                         style="height: 124px; display: block; transform: translate3d(0px, 0px, 0px);"></div>
+                </div>
+            </div>
+
+            <!-- All-->
+            <a class="dropdown-item text-center text-primary notify-item notify-all" href="javascript:void(0);">
+                View all
+                <i class="fe-arrow-right"></i>
+            </a>
+
+        </div>
+
+        <!--Name option-->
+        <a class="nav-link nav-user me-0 waves-effect waves-light text-white" href="#"
+           role="button" style="font-size: 13px">
+            <img class="rounded-circle" style="background: white; width: 32px; height: 32px">
+            <span class="pro-user-name ms-1">Name</span>
+        </a>
+        <!-- Login Functionality-->
+        <ul class="navbar-nav px-3">
+            <li class="nav-item text-nowrap">
+                <a class="nav-link text-white" href="../Login/loginPage.html" id="SignIn" style="font-size: 13px">Sign
+                    out</a>
+            </li>
+        </ul>
+    </div>
+</header>
+
+
+<aside class="sidebar">
+    <ul class="navbar-nav side-menu">
+        <li class="nav-item">
+            <a class="nav-link" href="../index.html">
+                <i class="fab fa-dashcube" style="font-size: 20px; padding: 0 10px"></i>Dashboard</a></li>
+        <li class="nav-item"><a class=" nav-link active item" href="#">
+            <i class="fas fa-book-open"  style="font-size: 20px; padding: 0 10px"></i>About</a></li>
+        <li class="nav-item"><a class=" nav-link" href="../Table/Table.html">
+            <i class="fas fa-table" style="font-size: 20px; padding: 0 5px"></i>Target</a></li>
+        <li class="nav-item"><a class=" nav-link" href="#">
+            <i class="fas fa-user-cog"  style="font-size: 20px; padding: 0 5px"></i>Settings</a></li>
+    </ul>
+</aside>
+
+
+<main class="content-page bg-dark">
+    <div class="about-section" style="margin-right: 20px">
+        <h1>About Us</h1>
+        <p>Some text about who we are and what we do.</p>
+        <p>Resize the browser window to see that this page is responsive by the way.</p>
+    </div>
+
+    <h2 style="text-align:center">Our Team</h2>
+    <div class="d-flex">
+        <div class="column">
+            <div class="card" style="height: 320px;">
+
+                <div class="container">
+                    <h2 style="padding: 10px"> Bhavya Upadhyay</h2>
+                    <p class="title">CEO & Founder</p>
+                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                    <p>bhavya.upadhyay_cs19@gla.ac.in</p>
+                    <p><button class="button">Contact</button></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card" style="height: 320px">
+                <div class="container">
+                    <h2 style="padding: 10px">Kshitij Maheshwari</h2>
+                    <p class="title">Art Director</p>
+                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                    <p>kshitij.maheshwari_cs19@gla.ac.in</p>
+                    <p><button class="button" style="">Contact</button></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="column">
+            <div class="card"  style="height: 320px">
+
+                <div class="container">
+                    <h2 style="padding: 21px">Darshil Gupta</h2>
+                    <p class="title">Designer</p>
+                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                    <p>darshil.gupta_cs19@gla.ac.in</p>
+                    <p><button class="button" style="margin-top: 15px">Contact</button></p>
+                </div>
+            </div>
+        </div>
+        <div class="column">
+            <div class="card"  style="height: 320px"    >
+
+                <div class="container">
+                    <h2 style="padding: 20px">Jatin Bitthal</h2>
+                    <p class="title">gdsgds</p>
+                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                    <p>jatin.bitthal_cs19@gla.ac.in</p>
+                    <p><button class="button" style="margin-top: 15px">Contact</button></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+    <footer class="footer bg-dark">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6">
+                    <script>document.write(new Date().getFullYear())</script>
+                    © Codefox theme by <a href="">Coderthemes</a>
+                </div>
+                <div class="col-md-6">
+                    <div class="text-md-end footer-links d-none d-sm-block">
+                        <a href="#" style="margin-right: 10px; color: #8c98a5; text-decoration: none">About Us</a>
+                        <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">Help</a>
+                        <a href="../Contact%20Us/ContactUs.html" style="margin-right: 10px; color: #8c98a5; text-decoration: none">Contact
+                            Us</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+</main>
+
+<script src="../DashboardHandlers.js"></script>
 </body>
 </html>
