--- a/Contact Us/ContactUs.html
+++ b/Contact Us/ContactUs.html
@@ -6,6 +6,7 @@
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <link href="../index.css" rel="stylesheet">
+    <link rel="stylesheet" href="ContactUs.css">
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
     <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -203,114 +204,64 @@
         <li class="nav-item">
             <a class="nav-link " href="../index.html">
                 <i class="fab fa-dashcube" style="font-size: 20px; padding: 0 10px"></i>Dashboard</a></li>
-        <li class="nav-item"><a class=" nav-link" href="#">
-            <span class="item">About</span>
-        </a></li>
+        <li class="nav-item"><a class=" nav-link" href="../About/About.html">
+            <i class="fas fa-book-open"  style="font-size: 20px; padding: 0 10px"></i>About</a></li>
         <li class="nav-item"><a class=" nav-link" href="../Table/Table.html">
             <i class="fas fa-table" style="font-size: 20px; padding: 0 5px"></i>Target</a></li>
         <li class="nav-item"><a class=" nav-link" href="#">
-            <span class="item">Settings</span>
-        </a></li>
+            <i class="fas fa-user-cog"  style="font-size: 20px; padding: 0 5px"></i>Settings</a></li>
     </ul>
 </aside>
 
 
-<main class="content-page bg-dark">
-    <!--Section: Contact v.2-->
-    <section class="mb-4 text-white">
+<main class="content-page bg-dark p-5">
 
-        <!--Section heading-->
-        <h2 class="h1-responsive font-weight-bold text-center my-4 ">Contact us</h2>
-        <!--Section description-->
-        <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
-            a matter of hours to help you.</p>
-
-        <div class="row">
-            <!--Grid column-->
-            <div class="col-md-9 mb-md-0 mb-5">
-                <form id="contact-form" name="contact-form" method="POST">
-
-                    <!--Grid row-->
-                    <div class="row my-3" style="align-items: center">
-
-                        <!--Grid column-->
-                        <div class="col-md-6">
-                            <div class="md-form mb-0">
-                                <input type="text" id="name" name="name" class="form-control p-2" style="width: 400px; height: 50px">
-                                <label for="name" class="">Your name</label>
-                            </div>
-                        </div>
-                        <!--Grid column-->
-
-                        <!--Grid column-->
-                        <div class="col-md-6">
-                            <div class="md-form mb-0">
-                                <input type="text" id="email" name="email" class="form-control p-2" style="width: 400px; height: 45px">
-                                <label for="email" class="">Your email</label>
-                            </div>
-                        </div>
-                        <!--Grid column-->
-
-                    </div>
-                    <!--Grid row-->
-
-                    <!--Grid row-->
-                    <div class="row my-3" style="margin-top: 20px">
-                        <div class="col-md-12">
-                            <div class="md-form mb-0">
-                                <input type="text" id="subject" name="subject" class="form-control p-2">
-                                <label for="subject" class="">Subject</label>
-                            </div>
-                        </div>
-                    </div>
-                    <!--Grid row-->
-
-                    <!--Grid row-->
-                    <div class="row">
-
-                        <!--Grid column-->
-                        <div class="col-md-12">
-
-                            <div class="md-form">
-                                <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
-                                <label for="message">Your message</label>
-                            </div>
-
-                        </div>
-                    </div>
-                    <!--Grid row-->
-
-                </form>
-
-                <div class="text-center text-md-left">
-                    <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+    <div class="container" style="width: 90%; margin-bottom: 10px">
+        <div class="content">
+            <div class="left-side">
+                <div class="address details">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <div class="topic">Address</div>
+                    <div class="text-one">Surkhet, NP12</div>
+                    <div class="text-two">Birendranagar 06</div>
                 </div>
-                <div class="status"></div>
+                <div class="phone details">
+                    <i class="fas fa-phone-alt"></i>
+                    <div class="topic">Phone</div>
+                    <div class="text-one">+0098 9893 5647</div>
+                    <div class="text-two">+0096 3434 5678</div>
+                </div>
+                <div class="email details">
+                    <i class="fas fa-envelope"></i>
+                    <div class="topic">Email</div>
+                    <div class="text-one">codinglab@gmail.com</div>
+                    <div class="text-two">info.codinglab@gmail.com</div>
+                </div>
             </div>
-            <!--Grid column-->
+            <div class="right-side">
+                <div class="topic-text">Send us a message</div>
+                <p>If you have any work for me or any type of queries related to my tutorial, you can send me message from here. It's my pleasure to help you.</p>
+                <form action="#">
+                    <div class="input-box">
+                        <input type="text" placeholder="Enter your name">
+                    </div>
+                    <div class="input-box">
+                        <input type="text" placeholder="Enter your email">
+                    </div>
+                    <div class="input-box message-box">
+                        <textarea name="Comment" id="Comment" cols="30" rows="10" placeholder="Enter Your Comment">
 
-            <!--Grid column-->
-            <div class="col-md-3 text-center">
-                <ul class="list-unstyled mb-0">
-                    <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                        <p>San Francisco, CA 94126, USA</p>
-                    </li>
-
-                    <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                        <p>+ 01 234 567 89</p>
-                    </li>
-
-                    <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                        <p>contact@mdbootstrap.com</p>
-                    </li>
-                </ul>
+                        </textarea>
+                    </div>
+                    <div class="button">
+                        <input type="button" value="Send Now" >
+                    </div>
+                </form>
             </div>
-            <!--Grid column-->
-
         </div>
+    </div>
 
-    </section>
-    <!--Section: Contact v.2-->
+
 
     <footer class="footer bg-dark">
         <div class="container-fluid">
@@ -321,7 +272,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="text-md-end footer-links d-none d-sm-block">
-                        <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">About
+                        <a href="../About/About.html" style="margin-right: 10px; color: #8c98a5; text-decoration: none">About
                             Us</a>
                         <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">Help</a>
                         <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">Contact
