--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <header class="navbar fixed-top flex-md-nowrap">
     <div class="d-flex">
-        <a class="navbar-brand col-sm-3 col-md-2 mr-0 text-white mx-5" href="#">Company name</a>
+        <a class="navbar-brand col-sm-3 col-md-2 mr-0 text-white mx-5" href="#" style="font-size: 30px">SALES OPS</a>
     </div>
 
 
@@ -35,17 +35,17 @@
         <!-- item-->
         <a class="dropdown-item" href="javascript:void(0);">
             <i class="fe-user me-1"></i>
-            <span>Create Users</span>
+            <span>Users</span>
         </a>
 
         <!-- item-->
         <a class="dropdown-item" href="javascript:void(0);">
             <i class="fe-bar-chart-line- me-1"></i>
-            <span>Revenue Report</span>
+            <span>Report</span>
         </a>
 
         <!-- item-->
-        <a class="dropdown-item" href="javascript:void(0);">
+        <a class="dropdown-item" href="#">
             <i class="fe-settings me-1"></i>
             <span>Settings</span>
         </a>
@@ -53,7 +53,7 @@
         <div class="dropdown-divider"></div>
 
         <!-- item-->
-        <a class="dropdown-item" href="javascript:void(0);">
+        <a class="dropdown-item" href="./Contact%20Us/ContactUs.html;">
             <i class="fe-headphones me-1"></i>
             <span>Help &amp; Support</span>
         </a>
@@ -203,14 +203,12 @@
         <li class="nav-item">
             <a class="nav-link active item" href="#">
                 <i class="fab fa-dashcube" style="font-size: 20px; padding: 0 10px"></i>Dashboard</a></li>
-        <li class="nav-item"><a class=" nav-link" href="#">
-            <span class="item">About</span>
-        </a></li>
+        <li class="nav-item"><a class=" nav-link" href="./About/About.html">
+            <i class="fas fa-book-open"  style="font-size: 20px; padding: 0 10px"></i>About</a></li>
         <li class="nav-item"><a class=" nav-link" href="./Table/Table.html">
             <i class="fas fa-table" style="font-size: 20px; padding: 0 5px"></i>Target</a></li>
         <li class="nav-item"><a class=" nav-link" href="#">
-            <span class="item">Settings</span>
-        </a></li>
+            <i class="fas fa-user-cog"  style="font-size: 20px; padding: 0 5px"></i>Settings</a></li>
     </ul>
 </aside>
 
@@ -322,7 +320,7 @@
     </div>
 
 
-    <div class="d-flex">
+    <div class="d-flex" style="margin-bottom: 10px">
         <div>
             <div class="card">
                 <div class="card-body">
@@ -394,7 +392,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="text-md-end footer-links d-none d-sm-block">
-                        <a href="#" style="margin-right: 10px; color: #8c98a5; text-decoration: none">About Us</a>
+                        <a href="./About/About.html" style="margin-right: 10px; color: #8c98a5; text-decoration: none">About Us</a>
                         <a href="javascript:void(0);" style="margin-right: 10px; color: #8c98a5; text-decoration: none">Help</a>
                         <a href="./Contact%20Us/ContactUs.html" style="margin-right: 10px; color: #8c98a5; text-decoration: none">Contact
                             Us</a>
