--- a/About/About.html
+++ b/About/About.html
@@ -16,7 +16,7 @@
 <body>
 <header class="navbar fixed-top flex-md-nowrap">
     <div class="d-flex">
-        <a class="navbar-brand col-sm-3 col-md-2 mr-0 text-white mx-5" href="#">Company name</a>
+        <a class="navbar-brand col-sm-3 col-md-2 mr-0 text-white mx-5" href="#" style="font-size: 30px">SALES OPS</a>
     </div>
 
 
@@ -46,7 +46,7 @@
         </a>
 
         <!-- item-->
-        <a class="dropdown-item" href="javascript:void(0);">
+        <a class="dropdown-item" href="../Contact%20Us/ContactUs.html">
             <i class="fe-settings me-1"></i>
             <span>Settings</span>
         </a>
@@ -228,7 +228,7 @@
 
                 <div class="container">
                     <h2 style="padding: 10px"> Bhavya Upadhyay</h2>
-                    <p class="title">CEO & Founder</p>
+                    <p class="title"> Web Developer & Team Leader</p>
                     <p>Some text that describes me lorem ipsum ipsum lorem.</p>
                     <p>bhavya.upadhyay_cs19@gla.ac.in</p>
                     <p><button class="button">Contact</button></p>
@@ -240,7 +240,7 @@
             <div class="card" style="height: 320px">
                 <div class="container">
                     <h2 style="padding: 10px">Kshitij Maheshwari</h2>
-                    <p class="title">Art Director</p>
+                    <p class="title">Web Developer</p>
                     <p>Some text that describes me lorem ipsum ipsum lorem.</p>
                     <p>kshitij.maheshwari_cs19@gla.ac.in</p>
                     <p><button class="button" style="">Contact</button></p>
@@ -253,7 +253,7 @@
 
                 <div class="container">
                     <h2 style="padding: 21px">Darshil Gupta</h2>
-                    <p class="title">Designer</p>
+                    <p class="title">CSS Master</p>
                     <p>Some text that describes me lorem ipsum ipsum lorem.</p>
                     <p>darshil.gupta_cs19@gla.ac.in</p>
                     <p><button class="button" style="margin-top: 15px">Contact</button></p>
@@ -265,7 +265,7 @@
 
                 <div class="container">
                     <h2 style="padding: 20px">Jatin Bitthal</h2>
-                    <p class="title">gdsgds</p>
+                    <p class="title">UI UX Designer</p>
                     <p>Some text that describes me lorem ipsum ipsum lorem.</p>
                     <p>jatin.bitthal_cs19@gla.ac.in</p>
                     <p><button class="button" style="margin-top: 15px">Contact</button></p>
