--- a/Table/Table.html
+++ b/Table/Table.html
@@ -15,8 +15,9 @@
 <body>
 <header class="navbar fixed-top flex-md-nowrap">
     <div class="d-flex">
-        <a class="navbar-brand col-sm-3 col-md-2 mr-0 text-white mx-5" href="#">Company name</a>
+        <a class="navbar-brand col-sm-3 col-md-2 mr-0 text-white mx-5" href="#" style="font-size: 30px">SALES OPS</a>
     </div>
+
 
 
     <!--For add new option-->
@@ -53,7 +54,7 @@
         <div class="dropdown-divider"></div>
 
         <!-- item-->
-        <a class="dropdown-item" href="javascript:void(0);">
+        <a class="dropdown-item" href="../Contact%20Us/ContactUs.html">
             <i class="fe-headphones me-1"></i>
             <span>Help &amp; Support</span>
         </a>
