--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="dropdown-divider"></div>
 
         <!-- item-->
-        <a class="dropdown-item" href="./Contact%20Us/ContactUs.html;">
+        <a class="dropdown-item" href="./Contact%20Us/ContactUs.html">
             <i class="fe-headphones me-1"></i>
             <span>Help &amp; Support</span>
         </a>
