--- a/Contact Us/ContactUs.html
+++ b/Contact Us/ContactUs.html
@@ -16,7 +16,7 @@
 <body>
 <header class="navbar fixed-top flex-md-nowrap">
     <div class="d-flex">
-        <a class="navbar-brand col-sm-3 col-md-2 mr-0 text-white mx-5" href="#">Company name</a>
+        <a class="navbar-brand col-sm-3 col-md-2 mr-0 text-white mx-5" href="#" style="font-size: 30px">SALES OPS</a>
     </div>
 
 
@@ -54,7 +54,7 @@
         <div class="dropdown-divider"></div>
 
         <!-- item-->
-        <a class="dropdown-item" href="javascript:void(0);">
+        <a class="dropdown-item" href="#">
             <i class="fe-headphones me-1"></i>
             <span>Help &amp; Support</span>
         </a>
