update about page

--- a/About/About.html
+++ b/About/About.html
@@ -189,7 +189,7 @@
         <!-- Login Functionality-->
         <ul class="navbar-nav px-3">
             <li class="nav-item text-nowrap">
-                <a class="nav-link text-white" href="./Login/loginPage.html" id="SignIn"
+                <a class="nav-link text-white" href="../Login/loginPage.html" id="SignIn"
                    style="font-size: 15px; transform: translateY(-3px)">Sign
                     out</a>
             </li>
